src/styles/_hero.scss
.hero {
  display: flex;
  flex-direction: column;

  @media screen and (min-width: 1024px) {
    flex-direction: row;
    padding: 0 0 0 80px;
  }

  &_content-wrapper {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding: var(--padding);

    @media screen and (min-width: 810px) {
      padding-right: 80px;
      padding-top: 80px;
      padding-right: 80px;
      padding-left: 80px;
    }

    @media screen and (min-width: 1024px) {
      padding-left: 0;
      padding-top: 160px;
    }
  }

  & .heading-one {
    color: var(--clr-black);
    display: block;
    padding-right: 32px;
  }

  & .heading-one > span {
    color: var(--clr-primary);
  }

  & .body-light {
    margin-top: 32px;
    color: var(--clr-grey-3);
  }

  &_search-location {
    &--container {
      margin-top: 16px;
      display: flex;
      border: 1px solid var(--clr-grey-1);
      align-items: center;
      justify-content: flex-start;
      gap: 8px;
      background-color: var(--clr-white);
      padding: 4px 4px 4px 24px;
      border-radius: 28px;
      min-width: 100%;

      @media screen and (max-width: 410px) {
        display: grid;
        grid-template-rows: 1fr 1fr;
        grid-template-columns: 1fr 4fr;
        padding: 4px 12px;
      }

      &:focus {
        outline: var(--clr-primary);
      }

      & > svg {
        height: 1.5rem;
        width: 1.5rem;
        fill: orange;

        @media screen and (max-width: 410px) {
          grid-column: 1;
          grid-row: 1;
        }
      }

      & > input {
        min-width: 0;
        border: none;
        outline: none;
        font-family: "lexend";
        border-radius: 16px;

        &:placeholder-shown {
          text-overflow: ellipsis;
        }

        @media screen and (min-width: 810px) {
          min-width: 70%;
        }

        @media screen and (max-width: 410px) {
          grid-column: 2;
          grid-row: 1;
        }
      }

      & > button {
        min-width: 0;
        font-size: 1rem;
        margin-left: auto;
        display: flex;
        align-items: center;
        gap: 4px;

        & > svg {
          min-width: 10px;
          width: 10px;
          margin-top: 2px;
          fill: white;
        }

        @media screen and (max-width: 410px) {
          grid-column: 1 / span 4;
          grid-row: 2;
          width: 100%;
          justify-content: center;
        }
      }
    }
  }

  &_partnership-text {
    margin-top: 64px;
  }

  &_partnership-container {
    width: 100%;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
    align-items: center;
  }

  &_img-container {
    display: grid;
    grid-template-columns: 1fr;
    position: relative;
    overflow-x: hidden;
    min-width: 50%;
    min-height: 100%;

    @media screen and (min-width: 1100px) {
      width: 50%;
    }

    &--img {
      height: 100%;
      width: 100%;
      object-fit: cover;

      @media screen and (min-width: 1024px) {
        border-radius: 0 0 0 100px;
      }
    }

    &--cards-container {
      min-width: max-content;
      padding: 0 12px;
      display: flex;
      align-items: center;
      gap: 24px;

      &.primary {
        animation: primary 20s linear infinite;
      }

      &.secondary {
        animation: secondary 20s linear infinite;
      }
    }
    &--window {
      display: flex;
      position: absolute;
      width: fit-content;
      z-index: 4;
      margin-bottom: 10%;
      align-self: end;
    }

    &--img,
    &--window {
      grid-row: 1;
      grid-column: 1;
    }
  }
}

@keyframes primary {
  from {
    transform: translateX(0);
  }
  to {
    transform: translateX(-100%);
  }
}

@keyframes secondary {
  from {
    transform: translateX(0);
  }
  to {
    transform: translateX(-100%);
  }
}

.square {
  position: absolute;
  @media screen and (min-width: 1200px) {
    &.red {
      height: 100px;
      width: 50px;
      border-top: 4px solid red;
      border-left: 4px solid red;
      border-radius: 4px;
      top: 112px;
      left: 50px;
    }

    &.blue {
      height: 50px;
      width: 25px;
      border-top: 4px solid #3b82f6;
      border-right: 4px solid #3b82f6;
      border-radius: 4px;
      bottom: 298px;
      right: 118px;
    }

    &.yellow {
      height: 50px;
      width: 25px;
      border-top: 4px solid #f59e0b;
      border-right: 4px solid #f59e0b;
      border-radius: 4px;
      bottom: 42px;
      right: 140px;
    }
  }
}

